plugins {
    id 'java'
    id 'application'
    id 'checkstyle'
    id 'com.adarshr.test-logger' version '3.2.0'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.junit.jupiter:junit-jupiter:5.8.2'
    implementation 'junit:junit:4.13.1'
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.mockito:mockito-core:4.6.1'
    implementation 'com.google.guava:guava:31.1-jre'
}

test {
    useJUnit()
}

checkstyle {
    maxWarnings = 0
    toolVersion = '10.3.1'
    getConfigDirectory().set(new File(rootDir, 'config/checkstyle'))
}

tasks.withType(Checkstyle) {
    reports {
        xml.required = false
        html.required = true
    }
}

application {
    mainClass = 'server.App'
}

jar {
    archiveBaseName = 'http-server'
    manifest {
        attributes(
                'Main-Class': 'server.App'
        )
    }
}

task stage(dependsOn: ['build', 'clean'])
build.mustRunAfter clean